--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="comments">
 
         <div class="comments-comment">
-          <a href="/username"><img src="" alt=""></a>
+          <a href="/username"><img src="./images/user.png" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username">
@@ -73,7 +73,7 @@
         </div>
 
         <div class="comments-comment">
-          <a href="/username"><img src="" alt=""></a>
+          <a href="/username"><img src="./images/user.png" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username">
@@ -86,7 +86,7 @@
         </div>
 
         <div class="comments-comment">
-          <a href="/username"><img src="" alt=""></a>
+          <a href="/username"><img src="./images/user.png" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username">
@@ -99,7 +99,7 @@
         </div>
 
         <div class="comments-comment">
-          <a href="/username"><img src="" alt=""></a>
+          <a href="/username"><img src="./images/user.png" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username">
@@ -112,7 +112,7 @@
         </div>
 
         <div class="comments-comment">
-          <a href="/username"><img src="" alt=""></a>
+          <a href="/username"><img src="./images/user.png" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username">
